--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "bcrypt-ts": "^5.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.453.0",
     "next": "15.0.0-rc.0",
     "next-auth": "5.0.0-beta.22",
     "next-themes": "^0.3.0",
     "react": "19.0.0-rc-f994737d14-20240522",
+    "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
